cluster/prod/chia/chia/chia-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chia
  namespace: chia
  labels:
    app.kubernetes.io/name: chia
spec:
  selector:
    app.kubernetes.io/name: chia
  ports:
  - protocol: TCP
    port: 8444
    targetPort: 8444
  type: LoadBalancer
  loadBalancerIP: 192.168.0.16
  externalTrafficPolicy: Local
